--- a/Kitodo/src/main/webapp/pages/productionTemplates.xhtml
+++ b/Kitodo/src/main/webapp/pages/productionTemplates.xhtml
@@ -91,17 +91,17 @@
                 <p:column headerText="#{msgs.auswahl}" style="width: 150px;">
                     <h:outputText>
                         <h:link outcome="/pages/ProzessverwaltungBearbeiten" title="#{msgs.prozessBearbeiten}" style="color: rgb(0,109,189); padding-right: 10px;">
-                            <i class="fa fa-pencil-square-o fa-lg"></i>
+                            <i class="fa fa-pencil-square-o fa-lg"/>
                             <f:param name="id" value="#{template.id}"/>
                         </h:link>
-                        <h:link outcome="" style="color: rgb(0,109,189); padding-right: 10px;">
-                            <i class="fa fa-clipboard fa-lg"></i>
+                        <h:link style="color: rgb(0,109,189); padding-right: 10px;">
+                            <i class="fa fa-clipboard fa-lg"/>
                         </h:link>
-                        <h:link outcome="" style="color: rgb(0,109,189); padding-right: 10px;">
-                            <i class="fa fa-inbox fa-lg"></i>
+                        <h:link style="color: rgb(0,109,189); padding-right: 10px;">
+                            <i class="fa fa-inbox fa-lg"/>
                         </h:link>
-                        <h:link outcome="" style="color: rgb(0,109,189); padding-right: 10px;">
-                            <i class="fa fa-clone fa-lg"></i>
+                        <h:link style="color: rgb(0,109,189); padding-right: 10px;">
+                            <i class="fa fa-clone fa-lg"/>
                         </h:link>
                     </h:outputText>
                 </p:column>
