--- a/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
@@ -27,13 +27,13 @@
 
         <p:tabView style = "height: 100%">
             <p:tab title="#{msgs.paginierung}">
-                <ui:include src="incMeta/Paginierung.xhtml" />
+                <ui:include src="pagination.xhtml" />
             </p:tab>
             <p:tab title="#{msgs.strukturdaten}">
-                <ui:include src="incMeta/StrukturdatenNeu.xhtml" />
+                <ui:include src="structureData.xhtml" />
             </p:tab>
             <p:tab title="#{msgs.metadata}">
-                <ui:include src="incMeta/NeuMetaNeu.xhtml" />
+                <ui:include src="metadata.xhtml" />
             </p:tab>
         </p:tabView>
 
