--- a/Kitodo/src/main/webapp/pages/incMeta/metadataStructureView.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataStructureView.xhtml
@@ -1,15 +1,13 @@
 <!--
- *
- * (c) Kitodo. Key to digital objects e. V. <contact@kitodo.org>
- *
- * This file is part of the Kitodo project.
- *
- * It is licensed under GNU General Public License version 3 or later.
- *
- * For the full copyright and license information, please read the
- * GPL3-License.txt file that was distributed with this source code.
- *
--->
+  ~ (c) Kitodo. Key to digital objects e. V. <contact@kitodo.org>
+  ~
+  ~ This file is part of the Kitodo project.
+  ~
+  ~ It is licensed under GNU General Public License version 3 or later.
+  ~
+  ~ For the full copyright and license information, please read the
+  ~ GPL3-License.txt file that was distributed with this source code.
+  -->
 
 <ui:composition
     xmlns="http://www.w3.org/1999/xhtml"
@@ -189,7 +187,7 @@
                     return true;
                     //	}
                 } catch (err) {
-                    parent.rechts.location.href = "Metadaten2rechts.xhtml";
+                    parent.rechts.location.href = "../Metadaten2rechtsOld.xhtml";
                 }
             }
 
