--- a/Kitodo/src/main/webapp/pages/incMeta/structureData.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/structureData.xhtml
@@ -18,15 +18,8 @@
         xmlns:t="http://myfaces.apache.org/tomahawk"
         xmlns:p="http://primefaces.org/ui">
 
-
-    <h3 style="margin-top:10px">
-        <h:outputText value="#{msgs.strukturdaten}"/>
-    </h3>
-
-
-
-    <h:panelGroup rendered="#{Metadaten.modeMoveStructureElement}">
-        <ui:include src="BaumZumVerschieben.xhtml" />
-    </h:panelGroup>
+    <f:view>
+        <h:outputLabel value="not implemented"/>
+    </f:view>
 
 </ui:composition>
