--- a/Kitodo/src/main/webapp/pages/incMeta/pagination.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/pagination.xhtml
@@ -35,8 +35,9 @@
                 <p:messages id="messagesPagination" closable="true" />
 
                 <h:panelGrid id="setPaginationGrid" columns="2">
-                    <h:outputLabel value="#{msgs.counting}:"/>
-                    <p:selectOneMenu value="#{Metadaten.paginator.paginationMode}" var="mode" style="width: 180px" >
+                    <h:outputLabel value="#{msgs.counting}:" for="selectPaginationMode"/>
+                    <p:selectOneMenu value="#{Metadaten.paginator.paginationMode}" var="mode"
+                                     id="selectPaginationMode" style="width: 180px" >
                         <f:selectItems value="#{Metadaten.paginator.paginationModes}" var="modeSelection"
                                        itemValue="#{modeSelection}" itemLabel="#{modeSelection.label}"/>
                         <p:column style="width:10%">
@@ -47,33 +48,36 @@
                         </p:column>
                     </p:selectOneMenu>
 
-                    <h:outputLabel value="Bearbeitungsumfang:"/>
-                    <p:selectOneMenu value="#{Metadaten.paginator.paginationScope}" style="width: 180px">
+                    <h:outputLabel value="#{msgs.paginationScope}:" for="selectPaginationScope"/>
+                    <p:selectOneMenu value="#{Metadaten.paginator.paginationScope}"
+                                     id="selectPaginationScope" style="width: 180px">
                         <f:selectItems value="#{Metadaten.paginator.paginationScopes}" var="scope"
                                        itemValue="#{scope}" itemLabel="#{scope.label}"/>
                     </p:selectOneMenu>
 
-                    <h:outputLabel value="#{msgs.paginierung}:"/>
-                    <p:selectOneMenu value="#{Metadaten.paginator.paginationType}" style="width: 180px">
+                    <h:outputLabel value="#{msgs.paginierung}:" for="selectPaginationType"/>
+                    <p:selectOneMenu value="#{Metadaten.paginator.paginationType}"
+                                     id="selectPaginationType" style="width: 180px">
                         <f:selectItems value="#{Metadaten.paginator.paginationTypes}" var="type"
                                        itemValue="#{type}" itemLabel="#{type.label}"/>
                     </p:selectOneMenu>
 
-                    <h:outputLabel value="#{msgs.paginationStartValue}:"/>
+                    <h:outputLabel value="#{msgs.paginationStartValue}:" for="paginationStartValue"/>
                     <h:panelGrid columns="2">
-                        <p:inputText id="paginationValue" required="true" style="width: 50px"
+                        <p:inputText id="paginationStartValue" required="true" style="width: 50px"
                                      value="#{Metadaten.paginationValue}"
                                      label="#{msgs.paginationStartValue}"
                                      requiredMessage="#{msgs.paginationStartValueNotSpecified}">
                             <f:validateLength minimum="1" />
                         </p:inputText>
-                        <p:message for="paginationValue" display="icon" />
+                        <p:message for="paginationStartValue" display="icon" />
                     </h:panelGrid>
 
 
-                    <h:outputLabel for="checkbox-fictitious" value="#{msgs.paginationFictitious}"/>
+                    <h:outputLabel for="checkbox-fictitious" value="#{msgs.paginationFictitious}:"/>
                     <p:selectBooleanCheckbox id="checkbox-fictitious" value="#{Metadaten.fictitious}"/>
 
+                    <h:panelGrid/>
                     <p:commandButton id="startPagination" action="#{Metadaten.changePagination}" update="paginationTab"
                                      value="start">
                     </p:commandButton>
