Code style cleanup

--- a/Kitodo/src/main/webapp/pages/BatchProperties.xhtml
+++ b/Kitodo/src/main/webapp/pages/BatchProperties.xhtml
@@ -255,13 +255,12 @@
                                                                                         -->
                                                                                     </h:panelGroup>
 
-
                                                                                     <!--  Date  -->
                                                                                     <h:panelGroup id="prpvw15_5"
                                                                                                   rendered="#{(myprocess_item.type.name == 'date')}">
-
-
-                                                                                        <p:calendar id="prpvw15_5_1" value="#{myprocess_item.value}" locale="#{SpracheForm.locale}" navigator="true" pattern="dd.MM.yyyy" />
+                                                                                        <p:calendar id="prpvw15_5_1" value="#{myprocess_item.value}"
+                                                                                                    locale="#{SpracheForm.locale}"
+                                                                                                    navigator="true" pattern="dd.MM.yyyy" />
                                                                                     </h:panelGroup>
 
                                                                                 </td>
