--- a/Kitodo/src/main/webapp/pages/MassImportPage2.xhtml
+++ b/Kitodo/src/main/webapp/pages/MassImportPage2.xhtml
@@ -149,7 +149,10 @@
                                                             <!--  Date  -->
                                                             <h:panelGroup id="prpvw15_5"
                                                                           rendered="#{(property.type.name == 'date')}">
-                                                                <p:calendar id="prpvw15_5_1" style="width: 500px;margin-right:15px" value="#{property.value}" locale="#{SpracheForm.locale}" navigator="true" pattern="dd.MM.yyyy" />
+                                                                <p:calendar id="prpvw15_5_1" value="#{property.value}"
+                                                                            locale="#{SpracheForm.locale}"
+                                                                            navigator="true" pattern="dd.MM.yyyy"
+                                                                            style="width: 500px;margin-right:15px" />
                                                             </h:panelGroup>
                                                         </h:column>
                                                     </t:dataTable>
