--- a/Kitodo/src/main/webapp/pages/MultiMassImportPage2.xhtml
+++ b/Kitodo/src/main/webapp/pages/MultiMassImportPage2.xhtml
@@ -143,8 +143,9 @@
                                                             <!--  Date  -->
                                                             <h:panelGroup id="prpvw15_5"
                                                                           rendered="#{(property.type.name == 'date')}">
-
-                                                                <p:calendar id="prpvw15_5_1" value="#{property.value}" locale="#{SpracheForm.locale}" navigator="true" pattern="dd.MM.yyyy" />
+                                                                <p:calendar id="prpvw15_5_1" value="#{property.value}"
+                                                                            locale="#{SpracheForm.locale}"
+                                                                            navigator="true" pattern="dd.MM.yyyy" />
                                                             </h:panelGroup>
                                                         </h:column>
                                                     </t:dataTable>
