--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_BenutzerPopup.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_BenutzerPopup.xhtml
@@ -34,7 +34,8 @@
                                     tooltip="true"/>
 
                         <!-- Data table for user groups -->
-                        <p:dataTable var="user" value="#{ProzessverwaltungForm.activeUsers}" rows="10" paginator="true">
+                        <p:dataTable var="user" value="#{BenutzerverwaltungForm.lazyDTOModel}"
+                                     lazy="true" rows="#{LoginForm.myBenutzer.tableSize}" paginator="true">
                             <p:column headerText="#{msgs.benutzergruppe}">
                                 <h:outputText value="#{user.surname}, #{user.name}"/>
                             </p:column>
