--- a/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ (c) Kitodo. Key to digital objects e. V. <contact@kitodo.org>
-  ~
-  ~ This file is part of the Kitodo project.
-  ~
-  ~ It is licensed under GNU General Public License version 3 or later.
-  ~
-  ~ For the full copyright and license information, please read the
-  ~ GPL3-License.txt file that was distributed with this source code.
-  -->
+ *
+ * (c) Kitodo. Key to digital objects e. V. <contact@kitodo.org>
+ *
+ * This file is part of the Kitodo project.
+ *
+ * It is licensed under GNU General Public License version 3 or later.
+ *
+ * For the full copyright and license information, please read the
+ * GPL3-License.txt file that was distributed with this source code.
+ *
+-->
 
 <ui:composition
         xmlns="http://www.w3.org/1999/xhtml"
