Add translation for processing and edit statutes

--- a/Kitodo/src/main/webapp/pages/inc_AktuelleSchritte/Schritte_Liste_DetailsKlein.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_AktuelleSchritte/Schritte_Liste_DetailsKlein.xhtml
@@ -91,7 +91,7 @@
                             <h:outputText value="#{msgs.aktualisierungstyp}:"/>
                         </td>
                         <td>
-                            <h:outputText value="#{item.editType.title}"/>
+                            <h:outputText value="#{item.editTypeTitle}"/>
                         </td>
                     </tr>
                 </table>
