Move getters and setters to BasisForm

--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste.xhtml
@@ -58,7 +58,7 @@
 
     <!-- List of processes -->
     <p:dataTable id="auflistung" tableStyleClass="standardTable" width="100%" cellspacing="1px" cellpadding="1px"
-                 var="item" value="#{ProzessverwaltungForm.lazyDataModel}" rows="#{LoginForm.myBenutzer.tableSize}"
+                 var="item" value="#{ProzessverwaltungForm.lazyDTOModel}" rows="#{LoginForm.myBenutzer.tableSize}"
                  lazy="true" paginator="true">
 
         <!-- +++++++++++++++++  SelectionBoxes ++++++++++++++++++++++++ -->
