--- a/Kitodo/src/main/webapp/pages/BenutzergruppenBearbeiten.xhtml
+++ b/Kitodo/src/main/webapp/pages/BenutzergruppenBearbeiten.xhtml
@@ -138,12 +138,12 @@
                                                 <td class="eingabeBoxen_row3" align="right">
 
                                                     <h:commandButton id="id22" value="#{msgs.loeschen}"
-                                                                     action="#{BenutzergruppenForm.Loeschen}"
+                                                                     action="#{BenutzergruppenForm.delete}"
                                                                      onclick="return confirm('#{msgs.sollDieserEintragWirklichGeloeschtWerden}?')"
                                                                      rendered="#{BenutzergruppenForm.myBenutzergruppe.id != null}"/>
 
                                                     <h:commandButton id="absenden" value="#{msgs.speichern}"
-                                                                     action="#{BenutzergruppenForm.Speichern}"/>
+                                                                     action="#{BenutzergruppenForm.save}"/>
                                                 </td>
                                             </tr>
                                         </table>
