--- a/Kitodo/src/main/webapp/pages/incMeta/structureData.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/structureData.xhtml
@@ -17,9 +17,9 @@
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:t="http://myfaces.apache.org/tomahawk"
         xmlns:p="http://primefaces.org/ui">
-
+    <h:form id="structureData">
     <f:view>
         <h:outputLabel value="not implemented"/>
     </f:view>
-
+    </h:form>
 </ui:composition>
