--- a/Kitodo/src/main/webapp/pages/incMeta/metadata.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadata.xhtml
@@ -10,13 +10,66 @@
   ~ GPL3-License.txt file that was distributed with this source code.
   -->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="not implemented"/>
-</f:view>
-</html>
+<ui:composition
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:h="http://xmlns.jcp.org/jsf/html"
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+    xmlns:f="http://xmlns.jcp.org/jsf/core"
+    xmlns:p="http://primefaces.org/ui">
+
+    <h:form id="metadata">
+
+        <h:panelGroup id="metadataTable" rendered="#{!empty Metadaten.myMetadaten}">
+
+            <p:dataTable value="#{Metadaten.myMetadaten}" var="item">
+
+                <p:column style="width:20%;">
+                    <h:outputText value="#{item.typ}"/>
+                </p:column>
+
+                <p:column>
+                    <p:inputTextarea value="#{item.value}" rows="2" style="width:98%;"/>
+                </p:column>
+
+                <p:column style="width:64px;text-align: center">
+
+                    <p:commandButton update="tabView:metadata:metadataTable" icon="ui-icon-copy" immediate="true"
+                                     title="#{msgs.metadatenKopieren}" action="#{Metadaten.copy}">
+                        <f:setPropertyActionListener value="#{item}" target="#{Metadaten.curMetadatum}"/>
+                    </p:commandButton>
+
+                    <p:commandButton update="tabView:metadata:metadataTable" icon="ui-icon-trash" immediate="true"
+                                     title="#{msgs.metadatenLoeschen}" action="#{Metadaten.delete}">
+                        <f:setPropertyActionListener value="#{item}" target="#{Metadaten.curMetadatum}"/>
+                    </p:commandButton>
+                </p:column>
+            </p:dataTable>
+        </h:panelGroup>
+
+        <div style="margin-top:30px">
+        <h:outputText value="#{msgs.neueMetadatenHinzufuegen}:" />
+        </div>
+
+        <p:panelGrid style="width:100%;margin-top:10px" styleClass="ui-noborder">
+            <p:row>
+                <p:column style="width:20%;">
+                    <p:selectOneMenu id="metadataTypeSelection" value="#{Metadaten.tempTyp}">
+                        <f:selectItems value="#{Metadaten.addableMetadataTypes}"/>
+                    </p:selectOneMenu>
+                </p:column>
+                <p:column>
+                    <p:inputTextarea value="#{Metadaten.metadatum.value}" rows="2" style="width:98%;"/>
+                </p:column>
+
+                <p:column style="width:64px;text-align: center">
+                    <p:commandButton update="tabView:metadata:metadataTable" icon="ui-icon-plus"
+                                     title="#{msgs.neueMetadatenHinzufuegen}" action="#{Metadaten.save}">
+                    </p:commandButton>
+                </p:column>
+            </p:row>
+
+        </p:panelGrid>
+
+    </h:form>
+
+</ui:composition>
