--- a/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataCenter.xhtml
@@ -13,32 +13,29 @@
 -->
 
 <ui:composition
-        xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:h="http://xmlns.jcp.org/jsf/html"
-        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-        xmlns:f="http://xmlns.jcp.org/jsf/core"
-        xmlns:p="http://primefaces.org/ui">
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:h="http://xmlns.jcp.org/jsf/html"
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+    xmlns:f="http://xmlns.jcp.org/jsf/core"
+    xmlns:p="http://primefaces.org/ui">
 
-    <h:form>
-        <div align="right">
-            <p:button value="#{msgs.validieren}" icon="ui-icon-arrowrefresh-1-w" />
-            <p:button value="#{msgs.zurueck}" outcome="/pages/ProzessverwaltungAlle" icon="ui-icon-close" />
-            <p:button value="#{msgs.speichern}" icon="ui-icon-disk" />
-            <p:button value="#{msgs.speichernZurueck}" icon="ui-icon-extlink" />
-        </div>
 
-        <p:tabView style = "height: 100%">
-            <p:tab title="#{msgs.paginierung}">
-                <ui:include src="pagination.xhtml" />
-            </p:tab>
-            <p:tab title="#{msgs.strukturdaten}">
-                <ui:include src="structureData.xhtml" />
-            </p:tab>
-            <p:tab title="#{msgs.metadata}">
-                <ui:include src="metadata.xhtml" />
-            </p:tab>
-        </p:tabView>
+    <div align="right">
+        <p:button value="#{msgs.validieren}" icon="ui-icon-arrowrefresh-1-w" disabled="true"/>
+        <p:button value="#{msgs.zurueck}" outcome="/pages/ProzessverwaltungAlle" icon="ui-icon-close"/>
+        <p:button value="#{msgs.speichern}" icon="ui-icon-disk" disabled="true"/>
+        <p:button value="#{msgs.speichernZurueck}" icon="ui-icon-extlink" disabled="true"/>
+    </div>
 
-    </h:form>
-
+    <p:tabView id="tabView">
+        <p:tab title="#{msgs.paginierung}">
+            <ui:include src="pagination.xhtml"/>
+        </p:tab>
+        <p:tab title="#{msgs.strukturdaten}">
+            <ui:include src="structureData.xhtml"/>
+        </p:tab>
+        <p:tab title="#{msgs.metadata}">
+            <ui:include src="metadata.xhtml"/>
+        </p:tab>
+    </p:tabView>
 </ui:composition>
