deleted old structure view, added javadoc

--- a/Kitodo/src/main/webapp/pages/incMeta/metadataStructureView.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataStructureView.xhtml
@@ -16,227 +16,18 @@
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:t="http://myfaces.apache.org/tomahawk"
     xmlns:p="http://primefaces.org/ui"
-    >
+>
+    <p:tree value="#{Metadaten.treeNotes}" var="element"
+            selectionMode="single"
+            selection="#{Metadaten.selectedTreeNote}"
+            style="width:99%;height:100%;">
+        <p:ajax event="select" listener="#{Metadaten.onNodeSelect}"
+                update="tabView:metadata"/>
 
-    <f:view locale="#{SpracheForm.locale}">
-
-        <h:body style="margin:2px 2px 2px 2px;background-color:#CBE5FC;">
-
-            <p:tree value="#{Metadaten.basicTreeNote}" var="doc"
-                    selectionMode="single"
-                    selection="#{Metadaten.selectedTreeNote}">
-                <p:ajax event="select" listener="#{Metadaten.onNodeSelect}"
-                        update="tabView:metadata"/>
-
-                <p:treeNode expandedIcon="ui-icon-document" collapsedIcon="ui-icon-document">
-                    <h:outputText value="#{doc.type}"/>
-                </p:treeNode>
-            </p:tree>
-
-            <h:outputText rendered="false" value="up"
-                          style="position: fixed;top: 20px;left: 170px" onclick="move(-50)"
-                          onmousemove="move(-2)"/>
-            <h:outputText rendered="false" value="down"
-                          style="position: fixed;top: 40px;left: 170px" onclick="move(50)"
-                          onmouseover="move(2)"/>
-
-            <table id="myTree" class="layoutTreeView2"
-                       style="width: 100%;height: 100%;">
-                <tr>
-                    <td valign="top" height="100%">
-
-                        <!-- globale Warn- und Fehlermeldungen -->
-                        <h:messages globalOnly="true" errorClass="text_red"
-                                    infoClass="text_blue" showDetail="true" showSummary="true"
-                                    tooltip="true"/>
-
-                        <h:form rendered="true" id="treeform">
-
-                            <t:commandButton id="reloadMyTree" forceId="true" value="reload"
-                                             action="Metadaten3links" style="color:#E7C342;display:none">
-                            </t:commandButton>
-
-                            <h:graphicImage id="veid3" alt="print" url="/pages/images/print.png"
-                                            onclick="self.window.print()" styleClass="action"
-                                            style="position:absolute;right:5px"/>
-
-                            <t:dataTable id="tabelle" forceId="true"
-                                         value="#{Metadaten.strukturBaum3}" var="item" cellpadding="0"
-                                         cellspacing="0">
-
-                                <h:column>
-                                    <h:commandLink action="#{NavigationForm.Reload}" target="links">
-                                        <t:updateActionListener property="#{item.node.expanded}"
-                                                                value="#{not item.node.expanded}"/>
-                                        <h:graphicImage value="/pages/images/plus.gif" alt=""
-                                                        rendered="#{item.node.hasChildren and not item.node.expanded}"
-                                                        style="border: 0px none;margin-top:0px;margin-right:3px;margin-left:#{item.niveau * 10 + 5}px;"/>
-                                        <h:graphicImage value="/pages/images/minus.gif" alt=""
-                                                        rendered="#{item.node.hasChildren and item.node.expanded}"
-                                                        style="border: 0px none;margin-top:0px;margin-right:3px;margin-left:#{item.niveau * 10 + 5}px;"/>
-                                    </h:commandLink>
-
-                                    <!-- Popup -->
-                                    <t:popup id="popup" closePopupOnExitingElement="true"
-                                             closePopupOnExitingPopup="true" displayAtDistanceX="17"
-                                             displayAtDistanceY="-40">
-
-                                        <f:facet name="popup">
-                                            <div>
-                                                <h:panelGrid columns="1"
-                                                             style="background-color:white; font-size:11px; border: 1px solid #e3c240; padding: 1px;"
-                                                             rendered="#{item.node.mainTitle != '' || item.node.zblNummer != '' || item.node.firstImage != '' || item.node.zblSeiten != '' || item.node.ppnDigital != ''}">
-                                                    <h:panelGrid columns="1" style="font-size: 10"
-                                                                 cellspacing="0" cellpadding="0" width="110">
-
-                                                        <h:outputText value="Maintitle:"
-                                                                      rendered="#{item.node.mainTitle != ''}"
-                                                                      style="font-size: 10; text-decoration: underline;font-weight: bold; color: black;"/>
-                                                        <h:outputText value="#{item.node.mainTitle}"
-                                                                      rendered="#{item.node.mainTitle != ''}"/>
-
-                                                        <h:outputText value="Startimage:"
-                                                                      rendered="#{node.firstImage!= ''}"
-                                                                      style="font-size: 10; text-decoration: underline;font-weight: bold; color: black;"/>
-                                                        <h:outputText value="#{item.node.firstImage}"
-                                                                      rendered="#{item.node.firstImage != ''}"/>
-
-                                                        <h:outputText value="ZBL-Seiten:"
-                                                                      rendered="#{item.node.zblSeiten != ''}"
-                                                                      style="font-size: 10; text-decoration: underline;font-weight: bold; color: black;"/>
-                                                        <h:outputText value="#{item.node.zblSeiten}"
-                                                                      rendered="#{item.node.zblSeiten != ''}"/>
-
-                                                        <h:outputText value="ZBL-ID:"
-                                                                      rendered="#{item.node.zblNummer != ''}"
-                                                                      style="font-size: 10; text-decoration: underline;font-weight: bold; color: black;"/>
-                                                        <h:outputText value="#{item.node.zblNummer}"
-                                                                      rendered="#{item.node.zblNummer != ''}"/>
-
-                                                        <h:outputText value="PPN-Digital"
-                                                                      rendered="#{item.node.ppnDigital != ''}"
-                                                                      style="font-size: 10; text-decoration: underline;font-weight: bold; color: black;"/>
-                                                        <h:outputText value="#{item.node.ppnDigital}"
-                                                                      rendered="#{item.node.ppnDigital != ''}"/>
-                                                    </h:panelGrid>
-                                                </h:panelGrid>
-                                            </div>
-                                        </f:facet>
-
-                                        <h:graphicImage value="/pages/images/document.png" alt=""
-                                                        rendered="#{item.node.hasChildren}"
-                                                        style="margin-right:2px;vertical-align:middle"/>
-                                        <h:graphicImage value="/pages/images/document.png" alt=""
-                                                        rendered="#{!item.node.hasChildren}"
-                                                        style="margin-right:2px;vertical-align:middle;margin-left:#{item.niveau * 10 + 17}px;"/>
-
-                                    </t:popup>
-
-                                    <h:outputText value="#{item.niveau}"
-                                                  style="color:grey;margin-right:4px"
-                                                  rendered="#{Metadaten.treeProperties.showtreelevel}"/>
-
-                                    <h:commandLink id="link" immediate="true" target="rechts"
-                                                   styleClass="#{item.node.selected ? 'documentSelected':'document'}"
-                                                   action="#{Metadaten.loadRightFrame}"
-                                                   onclick="if (!styleAnpassen2(this)) return">
-                                        <h:outputText value="#{item.node.description}"
-                                                      rendered="#{not Metadaten.treeProperties.showtitle || (Metadaten.treeProperties.showtitle and item.node.mainTitle == '')}"/>
-                                        <h:outputText value="#{item.node.mainTitle}"
-                                                      rendered="#{item.node.mainTitle != '' and Metadaten.treeProperties.showtitle}"/>
-                                        <t:updateActionListener
-                                                property="#{Metadaten.myStrukturelement}"
-                                                value="#{item.node.struct}"/>
-                                    </h:commandLink>
-
-                                    <h:outputText value="(#{item.node.firstImage}"
-                                                  style="color:grey;margin-left:4px"
-                                                  rendered="#{Metadaten.treeProperties.showfirstpagenumber and item.node.firstImage!=''}"/>
-
-                                    <h:outputText value="-#{item.node.lastImage})"
-                                                  style="color:grey;margin-left:0px"
-                                                  rendered="#{Metadaten.treeProperties.showfirstpagenumber and item.node.lastImage!=''}"/>
-
-                                </h:column>
-
-                            </t:dataTable>
-
-                        </h:form>
-
-                        <!-- ======================== // neuer Baum  ============================== -->
-
-                        <h:form id="formWarn" style="display:none">
-                            <h:inputHidden id="Warnmeldung"
-                                           value="#{msgs.esGibtUngespeicherteDaten}"/>
-                        </h:form>
-
-                    </td>
-                </tr>
-            </table>
-
-        </h:body>
-    </f:view>
-    <script type="text/javascript">
-        //<![CDATA[
-            // Funktion, die dynamisch das Stylesheet zuweist
-            function styleAnpassen2(element) {
-                try {
-                    //	if (parent.rechts.document.getElementById("formular4:DatenGeaendert").value == "1"){
-                    //		// Daten sind ungespeichert, also Warnung ausgeben und abbrechen
-                    //		alert(document.getElementById("formWarn:Warnmeldung").value);
-                    //		//return false;
-                    //	}else{
-                    // Daten sind gespeichert, also den Klick weitergeben
-                    var galleryLinks;
-                    galleryLinks = document.getElementsByTagName('a');
-                    for (var i = 0; i < galleryLinks.length; i++)
-                        galleryLinks[i].className = "document";
-                    element.className = "documentSelected";
-                    return true;
-                    //	}
-                } catch (err) {
-                    parent.rechts.location.href = "../Metadaten2rechtsOld.xhtml";
-                }
-            }
-
-
-            function reloadRightFrame() {
-                var myelement = parent.rechts.document.getElementById("formular2:docStructVerschiebenAbbrechen");
-                if (myelement != null) {
-                    myelement.click();
-                }
-                var myelement1 = parent.rechts.document.getElementById("formular2:docStructReload");
-                if (myelement1 != null) {
-                    myelement1.click();
-                }
-            }
-
-            var DHTML = (document.getElementById || document.all || document.layers);
-            var texttop = 10;
-
-            function getObj(name) {
-                if (document.getElementById) {
-                    this.obj = document.getElementById(name);
-                    this.style = document.getElementById(name).style;
-                }
-                else if (document.all) {
-                    this.obj = document.all[name];
-                    this.style = document.all[name].style;
-                }
-                else if (document.layers) {
-                    this.obj = document.layers[name];
-                    this.style = document.layers[name];
-                }
-            }
-
-            function move(amount) {
-                if (!DHTML) return;
-                var x = new getObj('treeform:tabelle');
-                texttop += amount;
-                x.style.top = texttop;
-            }
-        //]]>
-    </script>
+        <p:treeNode expandedIcon="ui-icon-document" collapsedIcon="ui-icon-document">
+            <!--TODO use localized name here, maybe by using getNameByLanguage(language)-->
+            <h:outputText value="#{element.type.name}"/>
+        </p:treeNode>
+    </p:tree>
 </ui:composition>
